--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <p>This is paragraph one</p>
     <p>This is creted for remote reposiotry</p>
+    <p>This edit if from remove repository
 </body>
 </html>
